Add the ability to remove accounts

--- a/sections/compute/IQueryDataStore.html
+++ b/sections/compute/IQueryDataStore.html
@@ -1,7 +1,7 @@
 <html>
     <script type="text/javascript">
-        const ipc = require('electron').ipcRenderer;
-        const BrowserWindow = require('electron').remote.BrowserWindow;
+        const ipc = require("electron").ipcRenderer;
+        const BrowserWindow = require("electron").remote.BrowserWindow;
 
         const DataStore = require("../../modules/data/DataStore.js");
         const dataSrc = new DataStore();
