Setup functions for ajax-based auth
It works, but still need to store the cookies and manage the authentication queue for adding accounts (as well as ipc callbacks).

--- a/sections/index.html
+++ b/sections/index.html
@@ -26,6 +26,8 @@
             <button type="submit">Add account</button>
         </form>
 
+        <button id="test">Do it</button>
+
         <br><br>
 
         <form id="data--accounts--form">
